--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -24,7 +24,9 @@
     padding: 5px;
     cursor: pointer;
     border-radius: 5px;
+    position: relative;
     transition: background 0.5s;
+
 }
 
 .menu-list:hover {
@@ -42,6 +44,21 @@
     background: none;
 }
 
-.second-menu {
-    margin-top: -240px;
+.menu-one, .menu-three {
+    flex-basis: 12%;
+}
+
+.menu-two {
+    flex-basis: 60%;
+}
+
+.blue-dot {
+    display: inline-block;
+    position: absolute;
+    height: 9px;
+    width: 9px;
+    border-radius: 50%;
+    background: #85AFFF;
+    top: 0;
+    right: 0;
 }
