--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -15,6 +15,9 @@
     justify-content: space-between;
     padding: 20px;
     margin-left: -30px;
+    /* position: absolute;
+    left: 0; */
+    flex-basis: 5%;
 }
 
 .menu-list {
@@ -61,4 +64,13 @@
     background: #85AFFF;
     top: 0;
     right: 0;
+}
+
+@media only screen and (max-width: 1025px){
+    .menu{
+        padding: 10px 0;
+        position: sticky;
+        left: -30;
+        top: 0;
+    }
 }
