--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@
 html, body {
   height: 100%;
 }
+ html {
+  scroll-behavior: smooth;
+ }
+
 
 body {
   font-family: 'Newsreader', serif;
@@ -32,5 +36,7 @@ body {
 .App {
   position: relative;
   display: flex;
+  /* flex-wrap: wrap; */
 }
+
 
