--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -8,7 +8,7 @@
     gap: 20px;
 }
 
-.menu {
+.menu1 {
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -18,6 +18,14 @@
     /* position: absolute;
     left: 0; */
     flex-basis: 5%;
+}
+
+.menu2 {
+    display: none;
+}
+
+.menu-header {
+    display: none;
 }
 
 .menu-list {
@@ -67,10 +75,90 @@
 }
 
 @media only screen and (max-width: 1025px){
-    .menu{
+    .menu1{
         padding: 10px 0;
         position: sticky;
         left: -30;
         top: 0;
     }
+}
+
+@media only screen and (max-width: 769px){
+    .selected {
+        background-color: transparent;
+        color: var(--icon-color);
+    }
+
+}
+
+@media only screen and (max-width: 426px) {
+    .menu1 {
+        display: none;
+    }
+
+    .menu2 {
+        display: block;
+        width: 100%;
+        padding: 10px 20px;
+        position: fixed;
+        bottom: 0;
+        background-color: var(--color-white);
+        z-index: 5;
+    }
+
+    .menu2 > ul {
+        width: 100%;
+        display: flex;
+        list-style: none;
+        padding: 0;
+        justify-content: space-between;
+    }
+
+    .menu2-list {
+        color: var(--icon-color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: background 0.5s;
+    }
+
+    .menu2-list:hover {
+        background: var(--color-primary);
+        color: var(--color-white);
+    }
+
+    .menu-header {
+        width: 100%;
+        display: block;
+        padding: 10px 20px;
+        position: sticky;
+        top: 0;
+        background-color: var(--color-white);
+        z-index: 5;
+    }
+
+    .menu-header > ul {
+        width: 100%;
+        display: flex;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        justify-content: space-between;
+    }
+
+    .header-list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+        cursor: pointer;
+        border-radius: 5px;
+        position: relative;
+        color: var(--icon-color);
+    }
+
+    
 }
