Styling Changed for select tag

--- a/src/components/Strategy/Strategy.css
+++ b/src/components/Strategy/Strategy.css
@@ -111,4 +111,8 @@
     .help-section > a {
         display: none;
     }
+
+    form > select {
+        background-color: var(--color-white);
+    }
 }
