--- a/src/components/Income/Income.css
+++ b/src/components/Income/Income.css
@@ -224,7 +224,7 @@
 
 }
 
-@media only screen and (max-width: 426px) {
+@media only screen and (max-width: 600px) {
     .income-container {
         flex-basis: 100%;
     }
@@ -270,6 +270,7 @@
 
     .chart2 {
         display: block;
+        margin-top: -20px;
     }
 
     #income-comparison {
