--- a/src/index.css
+++ b/src/index.css
@@ -33,15 +33,30 @@ body {
   color: var(--color-black);
 }
 
-.App {
+.App1 {
   position: relative;
   display: flex;
   /* flex-wrap: wrap; */
 }
 
+.App2 {
+  display: none;
+}
+
 
 @media only screen and (max-width: 768px){
-  .App {
+  .App1 {
+    flex-wrap: wrap;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .App1 {
+    display: none;
+  }
+
+  .App2 {
+    display: flex;
     flex-wrap: wrap;
   }
 }
